discussion/kv_engine/155325/155325_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

Test clang-tidy

Change-Id: Id59d503a56fd211f798fbbfb25344e2b41ecb590

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-06-15 09:15:46.000000000
Message: 
Patch Set 6: Patch Set 5 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-15 09:41:45.000000000
Message: 
Patch Set 6: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36878/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0032/0045]: test get_meta with item_eviction...(7 ms) SKIPPED


99% tests passed, 1 tests failed out of 408

Total Test time (real) = 245.26 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36878/ )

Timeout of a CTest test 408/408 Test #287: ep_testsuite_xdcr.ephemeral.comp_active .......................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36878/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9886/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9886/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9886/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8475/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/395/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31507/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10537/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11609/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11456/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11884/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19472/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
